mine info update complete
