# controller/account/account.go
@@ -4,12 +4,19 @@ import (
 	"ImageCreation/controller/response"
 	"ImageCreation/dao/redis"
 	"ImageCreation/logic/account"
+	"ImageCreation/models"
 	"ImageCreation/pkg/jwt"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"os"
 	"strconv"
 	"time"
 )
+
+type UserInfo struct {
+	UserAccount models.User
+	UserInfo    models.UserInformation
+}
 
 // UserLogin 用户登录
 // @Summary 用户登录
@@ -202,6 +209,33 @@ func UserDelete(c *gin.Context) {
 	}
 }
 
+// ModifyHtml 修改用户信息页面
+// @Summary 修改用户信息页面
+// @Description 用于修改用户信息页面
+// @Tags 修改用户信息页面
+// @Accept application/json
+// @Produce application/json
+// @Param object body ModifyBinder false "修改用户账号信息参数"
+// @Security ApiKeyAuth
+// @Success 200 {object}  response.Information "获取修改用户信息页面成功"
+// @failure 401 {object}  response.Information "获取修改用户信息页面失败"
+// @Router /modify [GET]
+func ModifyHtml(c *gin.Context) {
+	userId := c.Query("id")
+	id, _ := strconv.ParseInt(userId, 10, 64)
+	if id == 0 {
+		c.HTML(http.StatusOK, "reminder-login.html", "")
+		return
+	}
+	var la account.Account
+	if userAccount, userInfo, err := la.UserAccountInfo(id); err != nil {
+		c.HTML(http.StatusOK, "errors.html", err)
+	} else {
+		c.HTML(http.StatusOK, "modify.html", UserInfo{userAccount, userInfo})
+	}
+	return
+}
+
 // UserModify 修改用户账号信息
 // @Summary 修改用户账号信息
 // @Description 用于修改用户账号信息
@@ -215,14 +249,36 @@ func UserDelete(c *gin.Context) {
 // @failure 402 {object}  response.Information "请输入信息"
 // @Router /account/modify [POST]
 func UserModify(c *gin.Context) {
-	information := c.PostFormMap("information")
-	if len(information) == 0 {
+	username := c.PostForm("username")
+	password := c.PostForm("password")
+	email := c.PostForm("email")
+	phone := c.PostForm("phone")
+	id := c.PostForm("id")
+	if len(username) == 0 && len(password) == 0 && len(email) == 0 && len(phone) == 0 {
 		response.Json(c, 402, "请输入信息", 0)
 		return
 	}
+	// 创建一个切片，存储有数据的值
+	infos := map[string]string{}
+	// 检查每个值是否有数据，有数据则加入切片
+	if len(username) != 0 {
+		infos["username"] = username
+	}
+	if len(password) != 0 {
+		infos["password"] = password
+	}
+	if len(email) != 0 {
+		infos["email"] = email
+	}
+	if len(phone) != 0 {
+		infos["phone"] = phone
+	}
+	if len(id) != 0 {
+		infos["id"] = id
+	}
 	var la account.Account
-	if err := la.SetAccount(information); err != nil {
-		response.Json(c, 401, "修改信息失败", 0)
+	if err := la.SetAccount(infos); err != nil {
+		response.Json(c, 401, "修改信息失败", err)
 		return
 	} else {
 		response.Json(c, 200, "修改信息成功", 0)
@@ -241,15 +297,68 @@ func UserModify(c *gin.Context) {
 // @Success 200 {object}  response.Information "修改信息成功"
 // @failure 401 {object}  response.Information "修改信息失败"
 // @failure 402 {object}  response.Information "请输入信息"
+// @failure 403 {object}  response.Information "头像保存失败"
 // @Router /account/modify/information [POST]
 func UserModifyInformation(c *gin.Context) {
-	information := c.PostFormMap("information")
-	if len(information) == 0 {
+	nickname := c.PostForm("nickname")
+	address := c.PostForm("address")
+	sex := c.PostForm("sex")
+	age := c.PostForm("age")
+	brithDate := c.PostForm("brith_date")
+	bio := c.PostForm("bio")
+	id := c.PostForm("id")
+	avatar, header, _ := c.Request.FormFile("avatar")
+	if len(nickname) == 0 && len(address) == 0 && avatar == nil && len(sex) == 0 && len(age) == 0 && len(bio) == 0 && len(brithDate) == 0 {
 		response.Json(c, 402, "请输入信息", 0)
 		return
 	}
+	// 创建一个切片，存储有数据的值
+	infos := map[string]string{}
+	// 检查每个值是否有数据，有数据则加入切片
+	if len(nickname) != 0 {
+		infos["nickname"] = nickname
+	}
+	if len(address) != 0 {
+		infos["address"] = address
+	}
+	if avatar != nil {
+		defer avatar.Close()
+		// 将文件保存到指定的路径，这里保存在当前目录下的 uploads 文件夹中
+		savePath := "./static/avatar/" + id + "/"
+		savePath1 := savePath + header.Filename
+		path := "/static/avatar/" + id + "/" + header.Filename
+		// 如果目录不存在，则创建目录
+		if _, err := os.Stat(savePath); os.IsNotExist(err) {
+			err := os.Mkdir(savePath, 0755)
+			if err != nil {
+				response.Json(c, 403, "头像保存失败", err.Error())
+				return
+			}
+		}
+		err := c.SaveUploadedFile(header, savePath1)
+		if err != nil {
+			response.Json(c, 403, "头像保存失败", err.Error())
+			return
+		}
+		infos["avatar"] = path
+	}
+	if len(sex) != 0 {
+		infos["sex"] = sex
+	}
+	if len(age) != 0 {
+		infos["age"] = age
+	}
+	if len(brithDate) != 0 {
+		infos["brithDate"] = brithDate
+	}
+	if len(bio) != 0 {
+		infos["bio"] = bio
+	}
+	if len(id) != 0 {
+		infos["id"] = id
+	}
 	var la account.Account
-	if err := la.SetUserInformation(information); err != nil {
+	if err := la.SetUserInformation(infos); err != nil {
 		response.Json(c, 401, "修改信息失败", 0)
 		return
 	} else {
@@ -282,5 +391,4 @@ func SendContactMail(c *gin.Context) {
 		response.Json(c, 200, "您的信息已发送。非常感谢。", "")
 	}
 	return
-
 }
